.k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: umperium-frontend
spec:
  selector:
    app: umperium-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
